# question-paper-generator

./: .env.example  .gitignore  NOTES.md  PATTERN_DIVERSITY_COMPLETE.md  PATTERN_DIVERSITY_FIX.md  README.md  TIKZ_FIX_COMPLETE.md  app.py  debug_llm_test.py  pyproject.toml  requirements.txt  test_patterns.py  test_questions.py  test_streamlit.py
output/: trignometry_manifest.json  trignometry_patterns.json  trignometry_questions.json
src/: __init__.py  clean_tikz_renderer.py  cli.py  config.py  llm_patterns.py  llm_questions.py  llm_utils.py  llm_utils_old.py  pdf_builder.py  pipeline.py  robust_tikz_renderer.py  schemas.py  schemas_old.py  tikz_renderer.py  validator.py
tests/: test_components.py
